[package]
name = "dvc-data"
version = "0.2.0"
edition = "2024"
authors = ["Saugat Pachhai"]
description = "Pure Rust implementation of DVC"
repository = "https://github.com/skshetry/dvc-data-rs/"

[package.metadata.wix]
upgrade-guid = "8D398D47-C88D-4FFA-BE6D-00735135ADE7"
path-guid = "9EC9C041-A663-4AC3-AA6A-0FE143307511"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflink-copy = "0.1.26"
hex = "0.4.3"
console = "0.15.11"
num_cpus = "1.16.0"
md-5 = "0.10.6"
rayon = "1.10.0"
jwalk = "0.8.1"
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.5.36", features = ["derive"] }
indicatif = { version = "0.17.11", features = ["rayon"] }
rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_yaml = "0.9"
ignore = "0.4.23"
itertools = "0.14.0"
env_logger = "0.11.8"
log = "0.4.27"
config = "0.15.11"
serde_derive = "1.0.219"
directories = "6.0.0"
git2 = { version = "0.20.1", default-features = false }
whoami = "1.6.0"
serde_with = "3.12.0"
thiserror = "2.0.12"

[target.'cfg(windows)'.dependencies]
file-id = "0.2.2"

[dev-dependencies]
tempfile = "3.19.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
case_sensitive_file_extension_comparisons = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "upload"
